@@ -1,3 +1,8 @@
+2008-01-28  Christian Persch  <chpe@gnome.org>
+
+	* src/xstuff.c: (get_typed_property_data): Don't use
+	G_GNUC_PRETTY_FUNCTION. Fixes the build with glib trunk.
+
 2007-10-13  Callum McKenzie  <callum@spooky-possum.org>
 
 	* src/trash-monitor.c: Use G_DEFINE_TYPE macros. Patch from Jaap
